# pinns

./: .gitignore  1d-heat-animation.ipynb  Dockerfile  README.md  inference-100x100-cpu.4445915.out  inference-100x100-cpu.4445992.out  inference-100x100-cpu.4445993.out  pyproject.toml
.devcontainer/: devcontainer.json
containers/: README.md
data/: 12steps_pfull.npy  12steps_ufull.npy  12steps_vfull.npy
inference/: inference-100x100-gpu.4445688.out  inference-100x100.4445675.out  inference-gpu.sh  inference.sh
meetings/: minutes.md
models/: 1d-heat-pinn-1000epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-100epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-1epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-2000epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-20epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-2epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-500epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d-heat-pinn-5epochs-lr0.001-adam-x51-t1000-alpha1.22e-3.pt  1d_heat_model.pt  2d-ns-pinn-1epochs-lr0.001-adam-cavity-nu0.01-u1-20x20.pt  5000epoch-20x20_0_5_0.005_lr0.001_test0.7_adam.pt  cpu_model_cavity_nu0.01_U1_20x20_epochs1000_lrannealing_testpcnt0.2.pt  model_cavity_nu0.01_U1_20x20_20x20_epochs200_lrannealing_testpcnt0.5.pt  model_cavity_nu0.01_U1_20x20_epochs1000_lrannealing_testpcnt0.2.pt  model_cavity_nu0.01_U1_20x20_epochs1000_lrannealing_testpcnt0.5.pt  model_cavity_nu0.01_U1_20x20_epochs1000_lrannealing_testpcnt0.8.pt  model_cavity_nu0.01_U1_20x20_epochs1000_noadaption_testpcnt0.2.pt  (+26 more)
(+9842 files in other folders)
