[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cfdpinn"
authors = [
    {name = "Harry McHugh", email = "harrymchugh@gmail.com"},
]
version = "0.1"
description = "An MSc project using physics-informed nerual networks for computaional fluid dynamics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ofpp",
    "numpy",
    "torch",
    "torchvision",
    "torchaudio",
    "tensorboard",
    "torch_tb_profiler",
    "matplotlib",
    "scikit-learn",
    "tdqm",
    "softadapt@git+https://github.com/dr-aheydari/SoftAdapt.git#egg=5fc955f"
]
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/harrymchugh/cfdpinn"
documentation = "https://github.com/harrymchugh/cfdpinn"
repository = "https://github.com/harrymchugh/cfdpinn"

[project.scripts]
cfdpinn = "cfdpinn.main:main"
